[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codesentinel"
version = "1.0.0"
description = "CodeSentinel OpenEnv AI Training Environment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pytest==8.2.0",
    "rich==13.7.1"
]
